--- a/app/views/organisations/registrations/new.html.erb
+++ b/app/views/organisations/registrations/new.html.erb
@@ -5,7 +5,7 @@
     <%= f.input :name %>
     <%= f.input :location %>
     <%= f.input :email, input_html: {autofocus: true} %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
+    <%= f.input :description %>
     <%= f.input :password %>
     <%= f.input :password_confirmation, required: true %>
     <%= f.actions do %>
