added simple user profile, fixed HABTM relation

--- a/app/views/profiles/_project.html.erb
+++ b/app/views/profiles/_project.html.erb
@@ -1,1 +1,2 @@
-#TODO: write code to display projects, partial automatically iterates over the collection and has project as local variable
+<!--TODO: write code to display projects, partial automatically iterates over the collection and has project as local variable-->
+<li><%= project.name%></li>
