--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -7,6 +7,7 @@
 <%= semantic_form_for(resource, as: resource_name, url: registration_path(resource_name), html: {method: :put}) do |f| %>
     <%= f.input :first_name %>
     <%= f.input :last_name %>
+    <%= f.input :location %>
     <%= f.input :email, input_html: {autofocus: true} %>
 
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
