added simple project show view and missing belongs_to to model

--- a/app/views/profiles/show_organisation.html.erb
+++ b/app/views/profiles/show_organisation.html.erb
@@ -1,8 +1,8 @@
-
+<h1><%= @organisation.name %></h1>
 
 <div class="panel panel-default">
 <!-- Default panel contents -->
-<div class="panel-heading"><h1><%= @organisation.name %></h1></div>
+<div class="panel-heading">Informationen</div>
 <!-- List group -->
 <ul class="list-group">
   <li class="list-group-item"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span><span class="sr-only">Ort: </span> <%= @organisation.location%></li>
