--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -15,7 +15,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Partner <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link</a></li>
+        <li><a href="#">Spenden</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
@@ -35,43 +35,7 @@
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
-      <ul class="nav navbar-nav navbar-right">
-        <% unless signed_in?%>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> Anmelden!<span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">
-                <li><%= link_to "User", new_user_registration_path %></li>
-                <li><%= link_to "Organisation", new_organisation_registration_path %></li>
-              </ul>
-            </li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> Einloggen<span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">
-                    <li><%= link_to "User", new_user_session_path %></li>
-                    <li><%= link_to "Organisation", new_organisation_session_path %></li>
-              </ul>
-            </li>
-        <% else %>
-            <li class="dropdown">
-         <% if user_signed_in?%>
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%= concat_username(current_user)%> <span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">
-                <li><%= link_to 'Profil bearbeiten',edit_user_registration_path%></li>
-                <li class="divider"></li>
-                <li></span><%= link_to "Abmelden", destroy_user_session_path, method: :delete %></li>
-              </ul>
-            <% elsif organisation_signed_in?%>
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%= current_organisation.name%> <span class="caret"></span></a>
-                  <ul class="dropdown-menu" role="menu">
-                    <li><%= link_to 'Profil bearbeiten',edit_organisation_registration_path%></li>
-                    <li class="divider"></li>
-                    <li><%= link_to "Abmelden", destroy_organisation_session_path, method: :delete %></li>
-                  </ul>
-            <%end%>
-
-        <% end %>
-        </li>
-      </ul>
+       <%= render "layouts/sign_in" %>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
