added un/subscribe to projects, added various resource links to profile pages (still ugly tho)

--- a/app/views/profiles/_project.html.erb
+++ b/app/views/profiles/_project.html.erb
@@ -1,2 +1,2 @@
-<!--TODO: write code to display projects, partial automatically iterates over the collection and has project as local variable-->
-<li><%= project.name%></li>
+<!--TODO: make pretty-->
+<li><%= link_to "#{project.name}", project%></li>
