--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -5,7 +5,7 @@
         <%= f.input :date_from%>
         <%= f.input :date_to%>
         <%= f.input :description%>
-        <%  f.input :max_users%>
+        <%=  f.input :max_users%>
         <%= f.input :category%>
   <% end %>
   <%= f.actions do %>
