--- a/app/views/layouts/_sign_in.html.erb
+++ b/app/views/layouts/_sign_in.html.erb
@@ -38,6 +38,7 @@
             <ul class="dropdown-menu" role="menu">
               <li><%= link_to 'Profil ansehen', controller: "profiles", action: "show_organisation", id: current_organisation %></li>
               <li><%= link_to 'Profil bearbeiten',edit_organisation_registration_path%></li>
+              <li><%= link_to 'Neues Projekt erstellen', new_project_path%></li>
               <li class="divider"></li>
               <li><%= link_to "Abmelden", destroy_organisation_session_path, method: :delete %></li>
             </ul>
