--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -33,11 +33,17 @@
   <p><%= @project.description %></p>
 </div>
 <div>
-  <h2>Wer ist dabei <small><%= remaining_places_text @project %></small></h2>
+  <h2>Wer ist dabei</h2>
   <% if @project.users.empty? %>
       <p>Noch Niemand :(</p>
   <% else %>
-      <ul class="list-unstyled">
+      <div class="progress">
+        <div class="progress-bar" role="progressbar" aria-valuenow="<%= @project.percentage_filled%>" aria-valuemin="0" aria-valuemax="100" style="width: <%= @project.percentage_filled%>%">
+
+        </div>
+      </div>
+      </div>
+      <ul class="list-inline">
         <%= render partial: "user", collection: @project.users %>
       </ul>
   <% end %>
@@ -48,6 +54,9 @@
           <%= button_to "Keine Lust mehr...", remove_project_path, method: :delete, class: ["btn", "btn-danger", "btn-lg"] %>
       <% end %>
   <% end %>
+  <% if organisation_signed_in?%>
+      <%= button_to "Projekt abschließen", done_project_path, class: ["btn", "btn-success", "btn-lg"]%> <%#if @project.has_state? Project::STATE[:OVER] %>
+  <% end%>
 </div>
 
 <!--
