--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,11 +33,8 @@
           <%= yield %>
         </div>
       </div>
-      <footer id="footer">
-        <div class="well">
-         <p>Check the <a href="http://getbootstrap.com/components/">Bootstrap reference</a>, before you write your own components</p>
-          <p>Also check out the <a href="http://getbootstrap.com/javascript/">Javascript library</a></p>
-        </div>
+      <footer>
+          <%= render 'layouts/footer' %>
       </footer>
     </div>
   </div>
