added more functionality to map 2 :)

--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -14,8 +14,11 @@
             var markerHome;
             var iconBaseProjects = 'http://maps.google.com/mapfiles/kml/paddle/';
             var iconBaseHome = 'http://maps.google.com/mapfiles/kml/shapes/';
+            var geocoder;
 
             function initialize() {
+
+                geocoder = new google.maps.Geocoder();
 
                 var mapCanvas = document.getElementById('map-canvas');
                 var mapOptions = {
@@ -54,21 +57,24 @@
                 // Try HTML5 geolocation
                 if (navigator.geolocation) {
                     navigator.geolocation.getCurrentPosition(function (position) {
-                        var pos = new google.maps.LatLng(position.coords.latitude,
+                        var latlng = new google.maps.LatLng(position.coords.latitude,
                                 position.coords.longitude);
+
+                        geocoder.geocode({'location': latlng}, function(results, status) {
+                                    $('#locationinput').val(results[1].formatted_address);
+                        });
 
                         if(markerHome != undefined) {
                             markerHome.setMap(null);
                         }
 
                         markerHome = new google.maps.Marker({
-                            position: new google.maps.LatLng(position.coords.latitude,
-                                    position.coords.longitude),
+                            position: latlng,
                             map: map,
                             icon: iconBaseProjects + 'red-circle-lv.png'
                         });
 
-                        map.setCenter(pos);
+                        map.setCenter(latlng);
                         map.setZoom(initialzoom);
                     }, function () {
                         handleNoGeolocation(true);
@@ -101,7 +107,6 @@
 
             $("#locationinput").bind("enterKey", function (e) {
 
-                var geocoder = new google.maps.Geocoder();
                 geocoder.geocode({'address': $("#locationinput").val()}, function (results, status) {
                     if (status == google.maps.GeocoderStatus.OK) {
                         var pos = new google.maps.LatLng(results[0].geometry.location.lat(),
@@ -118,6 +123,8 @@
                         });
 
                         map.setCenter(pos);
+                        $("#slider-1").slider('value',minVal);
+                        $("#km").text(kmdisplay[minVal]);
                         map.setZoom(initialzoom);
 
                     } else {
@@ -133,21 +140,26 @@
 
             function getLocation() {
                 navigator.geolocation.getCurrentPosition(function (position) {
-                    var pos = new google.maps.LatLng(position.coords.latitude,
+                    var latlng = new google.maps.LatLng(position.coords.latitude,
                             position.coords.longitude);
+
+                    geocoder.geocode({'location': latlng}, function(results, status) {
+                        $('#locationinput').val(results[1].formatted_address);
+                    });
 
                     if(markerHome != undefined) {
                         markerHome.setMap(null);
                     }
 
                     markerHome = new google.maps.Marker({
-                        position: new google.maps.LatLng(position.coords.latitude,
-                                position.coords.longitude),
+                        position: latlng,
                         map: map,
                         icon: iconBaseProjects + 'red-circle-lv.png'
                     });
 
-                    map.setCenter(pos);
+                    map.setCenter(latlng);
+                    $("#slider-1").slider('value',minVal);
+                    $("#km").text(kmdisplay[minVal]);
                     map.setZoom(initialzoom);
                 });
             }
