--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,6 +1,6 @@
 <% content_for :head do %>
 
-    <script src="https://maps.googleapis.com/maps/api/js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=geometry"></script>
 
     <script>
 
@@ -14,6 +14,8 @@
             var markerHome;
             var iconBaseProjects = 'http://maps.google.com/mapfiles/kml/paddle/';
             var geocoder;
+            var latlng;
+            var initialLatLng = new google.maps.LatLng(60, 105);
 
             function initialize() {
 
@@ -27,12 +29,58 @@
                 }
                 map = new google.maps.Map(mapCanvas, mapOptions);
 
+                // Try HTML5 geolocation
+                if (navigator.geolocation) {
+                    navigator.geolocation.getCurrentPosition(function (position) {
+                        latlng = new google.maps.LatLng(position.coords.latitude,
+                                position.coords.longitude);
+
+                        geocoder.geocode({'location': latlng}, function (results, status) {
+                            $('#locationinput').val(results[1].formatted_address);
+                        });
+
+                        setHomeMarker();
+
+                    }, function () {
+                        handleNoGeolocation(true);
+                    });
+                } else {
+                    // Browser doesn't support Geolocation
+                    handleNoGeolocation(false);
+                }
+
+                setMarkers();
+            }
+
+            function handleNoGeolocation(errorFlag) {
+                if (errorFlag) {
+                    var content = 'Error: Ortungsfunktion fehlgeschlegen. Bitte Standort manuell eingeben.';
+                } else {
+                    var content = 'Error: Ihr Browser unterstützt keine Ortungsfunktion. Bitte Standort manuell eingeben.';
+                }
+
+                var options = {
+                    map: map,
+                    position: initialLatLng,
+                    content: content
+                };
+
+                var infowindow = new google.maps.InfoWindow(options);
+                map.setCenter(options.position);
+
+            }
+
+            function setMarkers() {
+
                 var markerP1 = new google.maps.Marker({
                     position: new google.maps.LatLng(48.152942, 11.548835),
                     map: map,
                     icon: iconBaseProjects + 'ylw-circle-lv.png'
                 });
-                var P1IW = "Projekt 1: DHZ München";
+
+                // alert(calcDistance(markerP1.getPosition(), initialLatLng));
+
+                var P1IW = "Projekt1: DHZ München";
                 var infowindowP1 = new google.maps.InfoWindow({
                     content: P1IW
                 });
@@ -53,53 +101,10 @@
                     infowindowP2.open(map, markerP2);
                 });
 
-                // Try HTML5 geolocation
-                if (navigator.geolocation) {
-                    navigator.geolocation.getCurrentPosition(function (position) {
-                        var latlng = new google.maps.LatLng(position.coords.latitude,
-                                position.coords.longitude);
-
-                        geocoder.geocode({'location': latlng}, function(results, status) {
-                                    $('#locationinput').val(results[1].formatted_address);
-                        });
-
-                        if(markerHome != undefined) {
-                            markerHome.setMap(null);
-                        }
-
-                        markerHome = new google.maps.Marker({
-                            position: latlng,
-                            map: map,
-                            icon: iconBaseProjects + 'red-circle-lv.png'
-                        });
-
-                        map.setCenter(latlng);
-                        map.setZoom(initialzoom);
-                    }, function () {
-                        handleNoGeolocation(true);
-                    });
-                } else {
-                    // Browser doesn't support Geolocation
-                    handleNoGeolocation(false);
-                }
             }
 
-            function handleNoGeolocation(errorFlag) {
-                if (errorFlag) {
-                    var content = 'Error: Ortungsfunktion fehlgeschlegen. Bitte Standort manuell eingeben.';
-                } else {
-                    var content = 'Error: Ihr Browser unterstützt keine Ortungsfunktion. Bitte Standort manuell eingeben.';
-                }
-
-                var options = {
-                    map: map,
-                    position: new google.maps.LatLng(60, 105),
-                    content: content
-                };
-
-                var infowindow = new google.maps.InfoWindow(options);
-                map.setCenter(options.position);
-
+            function calcDistance(fromLatLng, toLatLng) {
+                return (google.maps.geometry.spherical.computeDistanceBetween(fromLatLng, toLatLng) / 1000).toFixed(2);
             }
 
             google.maps.event.addDomListener(window, 'load', initialize);
@@ -108,23 +113,10 @@
 
                 geocoder.geocode({'address': $("#locationinput").val()}, function (results, status) {
                     if (status == google.maps.GeocoderStatus.OK) {
-                        var pos = new google.maps.LatLng(results[0].geometry.location.lat(),
+                        latlng = new google.maps.LatLng(results[0].geometry.location.lat(),
                                 results[0].geometry.location.lng());
 
-                        if(markerHome != undefined) {
-                            markerHome.setMap(null);
-                        }
-
-                        markerHome = new google.maps.Marker({
-                            position: pos,
-                            map: map,
-                            icon: iconBaseProjects + 'red-circle-lv.png'
-                        });
-
-                        map.setCenter(pos);
-                        $("#slider-1").slider('value',minVal);
-                        $("#km").text(kmdisplay[minVal]);
-                        map.setZoom(initialzoom);
+                        setHomeMarker();
 
                     } else {
                         alert("Die Eingabe \'" + $("#locationinput").val() + "\' liefert kein Ergebnis! \n Fehlercode: " + status);
@@ -137,34 +129,41 @@
                 }
             });
 
-            function getLocation() {
+            function getCurrentLocation() {
                 navigator.geolocation.getCurrentPosition(function (position) {
-                    var latlng = new google.maps.LatLng(position.coords.latitude,
+                    latlng = new google.maps.LatLng(position.coords.latitude,
                             position.coords.longitude);
 
-                    geocoder.geocode({'location': latlng}, function(results, status) {
+                    geocoder.geocode({'location': latlng}, function (results, status) {
                         $('#locationinput').val(results[1].formatted_address);
                     });
 
-                    if(markerHome != undefined) {
-                        markerHome.setMap(null);
-                    }
+                    setHomeMarker();
 
-                    markerHome = new google.maps.Marker({
-                        position: latlng,
-                        map: map,
-                        icon: iconBaseProjects + 'red-circle-lv.png'
-                    });
-
-                    map.setCenter(latlng);
-                    $("#slider-1").slider('value',minVal);
-                    $("#km").text(kmdisplay[minVal]);
-                    map.setZoom(initialzoom);
                 });
             }
 
+            function setHomeMarker() {
+
+                if (markerHome != undefined) {
+                    markerHome.setMap(null);
+                }
+
+                markerHome = new google.maps.Marker({
+                    position: latlng,
+                    map: map,
+                    icon: iconBaseProjects + 'red-circle-lv.png'
+                });
+
+                map.setCenter(latlng);
+                $("#slider-1").slider('value', minVal);
+                $("#km").text(kmdisplay[minVal]);
+                map.setZoom(initialzoom);
+
+            }
+
             $(document).on('click', '#getlocation', function () {
-                getLocation();
+                getCurrentLocation();
             });
 
 
@@ -239,10 +238,7 @@
         });
     </script>
 
-
 <% end %>
-
-
 
 
 <div id="static">
@@ -295,7 +291,6 @@
 
       </div>
 
-
       <div id="SPSlider">
         ScorePoints:
         <div id="SP1" class="SP"></div>
@@ -308,7 +303,7 @@
     <div id="legend">
 
       <div class="legendItem"><%= image_tag "red-circle-lv.png" %> Mein Standort</div>
-      <div class="legendItem"><%= image_tag "ylw-circle-lv.png" %> Projekte <span class="badge">2</span></div>
+      <div class="legendItem"><%= image_tag "ylw-circle-lv.png" %> Projekte <span class="badge"><%= Project.count(:id) %></span></div>
 
     </div>
 
@@ -317,27 +312,24 @@
   <!-- Map -->
   <div class="floatleft widthin staticheight" id="map-canvas"></div>
 
+  <!-- Projects -->
+  <div class="floatleft border1pxsolidgrey widthout staticheight">
 
-</div>
+    <div class="listProject">
+      <div class="bold">Projekt 1: Kindergarten</div>
+      <div class="italic">Mit Kindern im Kindergarten spielen.</div>
+      <div class="scorePoints">ScorePoints: 100</div>
+      <a href="#">weitere Infos</a>
+    </div>
 
-<!-- Projects -->
-<div class="floatleft border1pxsolidgrey widthout staticheight">
+    <div class="listProject">
+      <div class="bold">Projekt 2: DHZ München</div>
+      <div class="italic">Spielenachmittag mit herzkranken Menschen.</div>
+      <div class="scorePoints">ScorePoints: 150</div>
+      <a href="#">weitere Infos</a>
+    </div>
 
-  <div class="listProject">
-    <div class="bold">Projekt 1: Kindergarten</div>
-    <div class="italic">Mit Kindern im Kindergarten spielen.</div>
-    <div class="scorePoints">ScorePoints: 100</div>
-    <a href="#">weitere Infos</a>
   </div>
-
-  <div class="listProject">
-    <div class="bold">Projekt 2: DHZ München</div>
-    <div class="italic">Spielenachmittag mit herzkranken Menschen.</div>
-    <div class="scorePoints">ScorePoints: 150</div>
-    <a href="#">weitere Infos</a>
-  </div>
-
-</div>
 
 </div>
 
