--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,28 +1,46 @@
-<h1><%= @project.name %><span class="<%= state_label_class @project.state%>"><%=@project.state%></span></h1>
+<div class="banner-stub">
+  <h1>nice banner here</h1>
+</div>
+<h1><%= @project.name %></h1>
 <div class="panel panel-default">
   <!-- Default panel contents -->
   <div class="panel-heading">Informationen</div>
   <!-- List group -->
   <ul class="list-group">
     <li class="list-group-item">
-      <span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>
-      <span class="sr-only">Ort: </span> <%= @project.location %>
+      <div class="row">
+        <div class="col-md-4">
+          <span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>
+          <span class="sr-only">Ort: </span> <%= @project.location %>
+        </div>
+        <!--</li>
+        <li class="list-group-item">-->
+        <div class="col-md-4">
+          <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
+          <span class="sr-only">Verantalter: </span> <%= link_to @project.organisation.name, controller: "profiles", action: "show_organisation", id: @project.organisation %>
+        </div>
+        <div class="col-md-4">
+          <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+          <span class="sr-only">Prestige: </span> <%= @project.score %>
+        </div>
+      </div>
     </li>
     <li class="list-group-item">
-      <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
-      <span class="sr-only">Verantalter: </span> <%= link_to @project.organisation.name, controller: "profiles", action: "show_organisation", id: @project.organisation %>
-    </li>
-    <li class="list-group-item">
-      <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
-      <span class="sr-only">Start: </span> <%= @project.date_from %>
-    </li>
-    <li class="list-group-item">
-      <span class="glyphicon glyphicon-time" aria-hidden="true"></span>
-      <span class="sr-only">Dauer: </span> <%= @project.duration %>
-    </li>
-    <li class="list-group-item">
-      <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-      <span class="sr-only">Prestige: </span> <%= @project.score %>
+      <div class="row">
+        <div class="col-md-4">
+          <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
+          <span class="sr-only">Start: </span> <%= @project.date_from %>
+        </div>
+        <!--</li>
+        <li class="list-group-item">-->
+        <div class="col-md-4">
+          <span class="glyphicon glyphicon-time" aria-hidden="true"></span>
+          <span class="sr-only">Dauer: </span> <%= @project.duration %>
+        </div>
+        <div class="col-md-4">
+          <span class="<%= state_label_class @project.state %>"><%= @project.state %></span>
+        </div>
+      </div>
     </li>
   </ul>
 </div>
@@ -38,7 +56,7 @@
       <p>Noch Niemand :(</p>
   <% else %>
       <div class="progress">
-        <div class="progress-bar" role="progressbar" aria-valuenow="<%= @project.percentage_filled%>" aria-valuemin="0" aria-valuemax="100" style="width: <%= @project.percentage_filled%>%">
+        <div class="progress-bar" role="progressbar" aria-valuenow="<%= @project.percentage_filled %>" aria-valuemin="0" aria-valuemax="100" style="width: <%= @project.percentage_filled%>%">
 
         </div>
       </div>
@@ -54,12 +72,12 @@
           <%= button_to "Keine Lust mehr...", remove_project_path, method: :delete, class: ["btn", "btn-danger", "btn-lg"] %>
       <% end %>
   <% end %>
-  <% if organisation_signed_in?%>
-      <%= button_to "Projekt abschließen", done_project_path, class: ["btn", "btn-success", "btn-lg"]%> <%#if @project.has_state? Project::STATE[:OVER] %>
-  <% end%>
-</div>
+  <% if organisation_signed_in? %>
+      <%= button_to "Projekt abschließen", done_project_path, class: ["btn", "btn-success", "btn-lg"] %> <%#if @project.has_state? Project::STATE[:OVER] %>
+  <% end %>
+  </div>
 
-<!--
+  <!--
 <%= link_to 'Edit', edit_project_path(@project) %>
 <%= link_to 'Back', projects_path %>
 -->
