deactivated zoomcontrol in map

--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -25,6 +25,7 @@
                 var mapOptions = {
                     //center: new google.maps.LatLng(48.153858, 11.557649),
                     zoom: initialzoom,
+                    zoomControl: false,
                     mapTypeId: google.maps.MapTypeId.ROADMAP
                 }
                 map = new google.maps.Map(mapCanvas, mapOptions);
