--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -74,6 +74,7 @@
   <% end %>
   <% if organisation_signed_in? %>
       <%= button_to "Projekt abschließen", done_project_path, class: ["btn", "btn-success", "btn-lg"] %> <%#if @project.has_state? Project::STATE[:OVER] %>
+      <%= button_to "Projekt editieren", edit_project_path(@project), class: ["btn", "btn-success", "btn-lg"] , method: :get%> <%#if @project.has_state? Project::STATE[:OVER] %>
   <% end %>
   </div>
 
