--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -104,9 +104,8 @@ div.ui-datepicker{
 }
 
 #video {
-  border: 1px solid black;
   margin-bottom: 2em;
   text-align: center;
-  height: 10em;
+  height: 300px;
 
 }
