--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -21,7 +21,7 @@
   top: 0px;
   left: 0px;
   z-index: 10;
-  transition: top 2s, left 2s, opacity 2s, z-index 2s;
+  transition: top 2s, left 2s, opacity 2s, z-index 2s, box-shadow 2s;
   .title{
     color: white;
     position: absolute;
@@ -48,20 +48,22 @@
 }
 
 .col-md-4:hover .project-teaser{
-  top: 30px;
-  left: 30px;
+  top: 20px;
+  left: 20px;
   z-index: -10;
   opacity: .3;
-  box-shadow: 2px 2px 2px lighten(grey, 50);
-  transition: top 2s, left 2s, opacity 2s, z-index 2s;
+  box-shadow: 5px 5px 2px lighten(grey, 50);
+  transition: top 2s, left 2s, opacity 2s, z-index 2s, box-shadow 2s;
 }
 
 .project-info{
+  position: relative;
   top: 0;
   left: 0;
   z-index: -10;
+  opacity: .5;
   box-shadow: 2px 2px 2px lighten(grey, 50);
-  transition: top 2s, left 2s, z-index 2s;
+  transition: top 2s, left 2s, z-index 2s, box-shadow 2s;
 }
 
 
@@ -69,6 +71,7 @@
   top: -10px;
   left: -10px;
   z-index: 10;
-  box-shadow: 5px 5px 5px grey;
-  transition: top 2s, left 2s, z-index 2s;
+  box-shadow: 5px 5px 10px grey;
+  opacity: 1;
+  transition: top 2s, left 2s, opacity 2s, z-index 2s, box-shadow 2s;
 }
